코드 리뷰 후 XXX 코멘트 추가